--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="divider_grey">#C4BDBC</color>
     <color name="lavender">#8692f7</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#F44336</color>
 </resources>
