--- a/app/src/main/res/layout/employeeselfprofile.xml
+++ b/app/src/main/res/layout/employeeselfprofile.xml
@@ -11,24 +11,18 @@
     tools:context=".MainActivity"
     >
 
-    <TextView
-        android:id="@+id/selfTvUserProfile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="26dp"
-        android:text="User Profile"
-        android:textAlignment="textStart"
-        android:textColor="@color/white"
-        android:textSize="36sp"
-        android:layout_marginBottom="1dp"
-        android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/img_account"
-        android:layout_width="110dp"
-        android:layout_height="93dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/account" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_emp_account"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -158,6 +152,12 @@
         </ScrollView>
 
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 
 </LinearLayout>
