--- a/app/src/main/res/layout/os_activity_1.xml
+++ b/app/src/main/res/layout/os_activity_1.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.os_activity_1">
+    tools:context=".activities.os_activity_1"
+    android:background="@drawable/loginbkgimg">
 
     <TextView
         android:id="@+id/goalheading"
@@ -15,6 +16,7 @@
         android:layout_marginEnd="50dp"
         android:text="@string/goalheading"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -128,6 +130,7 @@
         android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttongoal"
@@ -171,6 +174,7 @@
         android:text="@string/currentgoal"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
