--- a/app/src/main/res/layout/activity_os2.xml
+++ b/app/src/main/res/layout/activity_os2.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.os_activity2">
+    tools:context=".activities.os_activity2"
+    android:background="@drawable/img21">
 
     <TextView
         android:id="@+id/progresstxt"
@@ -16,6 +17,7 @@
         android:text="@string/progresstxt"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
