--- a/app/src/main/res/layout/detailgoals.xml
+++ b/app/src/main/res/layout/detailgoals.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.detailgoals">
+    tools:context=".activities.detailgoals"
+    android:background="@drawable/bgtask">
 
     <Button
         android:id="@+id/btnUpdate"
